# media-player-info

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
media-players/: Makefile.am  acer-liquid.mpi  amazon-kindle.mpi  amazon_kindle.mpi  apple-1261_1262.mpi  apple-ipod.mpi  archos-1109_1300.mpi  archos-5imt.mpi  archos-vision_18.mpi  archos-xs_100.mpi  archos_5.mpi  barnes-and-noble_nook.mpi  cowon-0510_0520_0710_0730_0750.mpi  cowon-0601_0602_0604.mpi  cowon-iaudio_9.mpi  cowon-iaudio_g2.mpi  cowon-iaudio_m3.mpi  cowon-iaudio_u2.mpi  cowon-iaudio_u3.mpi  cowon-iaudio_u5_g2.mpi  cowon-iaudio_x5.mpi  cowon_iaudio-7.mpi  cowon_iaudio-9.mpi  cowon_j3.mpi  cowon_s9.mpi  creative-4115_4116_4117_4120_411e_4128_412b_4130.mpi  creative-muvo_v200.mpi  creative-zen_nano.mpi  creative-zen_nano_plus.mpi  creative-zen_stone.mpi  creative-zen_stone_plus.mpi  creative_zen-stone.mpi  danger-1001.mpi  domain-technologies-0x3203.mpi  foston-1100_1101.mpi  google-nexus-one.mpi  google_nexus-one.mpi  google_nexus-s.mpi  high-0c01_0c02_0c13.mpi  high-windows_mobile_ppc_htc_touch_hd.mpi  (+179 more)
tools/: Makefile.am  fdi2mpi.py  mpi2hwdb.py  mpi2udev.py  udev-syntax-check.py
